--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="profile__info">
                      <div class="profile__title">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <button type="button" aria-label="Кнопка" class="profile__edit">
+                        <button type="button" aria-label="Кнопка" class="profile__edit"></button>
                     </div>
                     <p class="profile__job">Исследователь Океана</p>
                 </div>
@@ -98,6 +98,7 @@
                     </form>
             </div>
     </div>
+</div>
 </body>
 <script src="./js/main.js"></script>
 </html>
