--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="page">
     <div class="root">
         <header class="header">
-            <img class="header__logo" src="./images/logo.png" alt="Логотип Место Россия">
+            <img class="header__logo" src="./images/logo.svg" alt="Логотип Место Россия">
         </header>
 
         <main class="main">
@@ -84,7 +84,7 @@
         </main>
 
             <footer class="footer">
-                <p class="footer__copyright" lang="en">© 2020 Mesto Russia</p>
+                <p class="footer__copyright">&copy;&nbsp;2022 Mesto Russia</p>
             </footer>
 
             <div class="popup">
@@ -99,8 +99,8 @@
             </div>
     </div>
 </div>
+<script src="scripts/index.js"></script>
 </body>
-<script src="./js/main.js"></script>
 </html>
 
 
