--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body class="page">
-    <div class="root">
         <header class="header">
             <img class="header__logo" src="./images/logo.svg" alt="Логотип Место Россия">
         </header>
@@ -32,31 +31,15 @@
 
             <section class="elements">
                 <div class="element">
-                    <img class="element__image" src="./images/Angkor.jpg" alt="Гигантский храмовый комплекс Камбоджа">
+                    <img class="element__image" src="./images/Washington USA.jpg" alt="Capitol-Hill">
                     <div class="element__description">
-                        <h2 class="element__title">Камбоджа</h2>
+                        <h2 class="element__title">Вашингтон</h2>
                         <button class="element__like" type="button" aria-label="like"></button>
                     </div>
                 </div>
 
                 <div class="element">
-                    <img class="element__image" src="./images/Italy.jpg" alt="Венеция">
-                    <div class="element__description">
-                        <h2 class="element__title">Венеция</h2>
-                        <button class="element__like" type="button" aria-label="like"></button>
-                    </div>
-                </div>
-
-                <div class="element">
-                    <img class="element__image" src="./images/Netherlands.jpg" alt="Поля тюльпанов в Нидерландах">
-                    <div class="element__description">
-                        <h2 class="element__title">Нидерланды</h2>
-                        <button class="element__like" type="button" aria-label="like"></button>
-                    </div>
-                </div>
-
-                <div class="element">
-                    <img class="element__image" src="./images/Santorirni.jpg" alt="Остров Санторини">
+                    <img class="element__image" src="./images/Santorini, Greece.jpg" alt="Santorini, Greece">
                     <div class="element__description">
                         <h2 class="element__title">Санторини</h2>
                         <button class="element__like" type="button" aria-label="like"></button>
@@ -64,41 +47,98 @@
                 </div>
 
                 <div class="element">
-                    <img class="element__image" src="./images/Zimbabwe.jpg"
-                        alt=" Водопад Виктория на реке Замбези и Зимбабве">
+                    <img class="element__image" src="./images/London, UK.jpg" alt="London, UK">
                     <div class="element__description">
-                        <h2 class="element__title">Зимбабве</h2>
+                        <h2 class="element__title">Лондон</h2>
                         <button class="element__like" type="button" aria-label="like"></button>
                     </div>
                 </div>
 
                 <div class="element">
-                    <img class="element__image" src="./images/Сантьяго-де-Компостела.jpg"
-                        alt="Кафедральный собор Испания">
+                    <img class="element__image" src="./images/Rome, Italy.jpg" alt="Фонтан Треви">
                     <div class="element__description">
-                        <h2 class="element__title">Испания</h2>
+                        <h2 class="element__title">Рим</h2>
+                        <button class="element__like" type="button" aria-label="like"></button>
+                    </div>
+                </div>
+
+                <div class="element">
+                    <img class="element__image" src="./images/Berlin, Germany.jpg"
+                        alt="Казанский собор">
+                    <div class="element__description">
+                        <h2 class="element__title">Берлин</h2>
+                        <button class="element__like" type="button" aria-label="like"></button>
+                    </div>
+                </div>
+
+                <div class="element">
+                    <img class="element__image" src="./images/Barcelona, Spain.jpg"
+                        alt="Тибидабо">
+                    <div class="element__description">
+                        <h2 class="element__title">Барселона</h2>
                         <button class="element__like" type="button" aria-label="like"></button>
                     </div>
                 </div>
             </section>
+            
+            <button type="button" aria-label="Кнопка плюс" class="profile__button"></button>
         </main>
 
             <footer class="footer">
                 <p class="footer__copyright">&copy;&nbsp;2022 Mesto Russia</p>
             </footer>
 
-            <div class="popup">
+            <div class="popup popup__edit_profile">
                 <div class="popup__container">
-                    <button type="button" aria-label="Кнопка закрытия" class="popup__close-button"></button>
+                    <button type="button" aria-label="Кнопка закрытия" 
+                    class="popup__close-button"></button>
                     <h3 class="popup__title">Редактировать профиль</h3>
-                    <form name="edit-form" class="popup__form">
-                        <input type="text" name="popup__name" placeholder="Ваше имя" class="popup__input popup__input_type_name">
-                        <input type="text" name="popup__job" placeholder="Ваша профессия" class="popup__input popup__input_type_job">
+                    <form name="edit-form" class="popup__edit_form">
+                        <input type="text" name="popup__name" placeholder="Ваше имя" 
+                        class="popup__input popup__input_type_name">
+                        <input type="text" name="popup__job" placeholder="Ваша профессия" 
+                        class="popup__input popup__input_type_job">
                         <button type="submit" class="popup__submit-button">Сохранить</button>
                     </form>
             </div>
     </div>
-</div>
+            <div class="popup popup__create_card">
+                <div class="popup__container">
+                    <button type="button" aria-label="Кнопка закрытия" 
+                    class="popup__close-button"></button>
+                <h3 class="popup__title">Новое место</h3>
+                <form name="add-form" class="popup__add_form">
+                    <input type="text" name="popup__name" placeholder="Наименование" 
+                    class="popup__input popup__input_type_place">
+                    <input type="text" name="popup__job" placeholder="Путь к картинке" 
+                    class="popup__input popup__input_type_link">
+                    <button  type="submit" class="popup__create-button">Создать</button>
+                </form>
+                </div>
+            </div>
+
+            <div id="popup-picture"  class="popup popup__picture">
+                <div class="popup__image_container">
+                    <button type="button" aria-label="Кнопка закрытия" 
+                    class="popup__close-button"></button>
+                    <img class="popup__image" src="#"  alt="#">
+                <p class="popup__description"></p>
+                </div>
+            </div>
+
+            <template class="card__template">
+                <article class="element">
+                    <button type="button" aria-label="Кнопка удалить" 
+                    class="card__delete-button"></button>
+                    <img class="element__image" src="#" alt="#">
+                    <div class="element__vector-like">
+                        <h2 class="element__caption"></h2>
+                        <button type="button" aria-label="Кнопка лайк" 
+                        class="element__like"></button>
+                    </div>
+                </article>
+            </template>
+
 <script src="scripts/index.js"></script>
 </body>
 </html>
